[package]
name = "blue-pill-boilerplate"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 'z' # turn on maximum optimizations.
lto = true      # Link-time-optimizations for further size reduction

[dependencies]
embedded-hal = "0.2.3"
nb = "1"
cortex-m = "0.7.6"
cortex-m-rt = "0.7.1"
panic-halt = "0.2.0"

[dependencies.stm32f1xx-hal]
version = "0.9.0"
features = ["rt", "stm32f103", "medium"]
